Fix tab tooltip issue where the format messed up too close to the right edge of the screen.

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -118,6 +118,7 @@ body {
 .tab-tooltip {
     height: 23px;
     max-width: 100%;
+    white-space: nowrap;
 }
 
 .ncube-selected {
